<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_bg"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.04"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/back"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_back"
                            tools:ignore="MissingConstraints" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="end"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_menu"
                            tools:ignore="MissingConstraints" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_update"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginEnd="25dp"
                        android:src="@drawable/ic_update"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_delete_data"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginEnd="25dp"
                        android:src="@drawable/ic_delete"
                        android:visibility="gone" />
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/im_profile"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="2dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:background="@drawable/bg_theme"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:text="@string/head_name"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/theme_bg"
                    android:layout_marginVertical="@dimen/_18sdp"
                    android:layout_marginHorizontal="@dimen/_18sdp"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_18sdp"
                    app:counterEnabled="true"
                    app:counterMaxLength="500"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:text="@string/head_about"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/theme_bg"
                    android:layout_marginVertical="@dimen/_18sdp"
                    android:layout_marginHorizontal="@dimen/_18sdp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    android:layout_marginHorizontal="@dimen/_18sdp"
                    app:counterMaxLength="500"
                    app:boxBackgroundMode="none"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_note_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/d_rounded_corner"
                        android:padding="@dimen/_8sdp"
                        android:textSize="@dimen/_10sdp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/proceed_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/cancel"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Cancel"
                            android:textStyle="bold"
                            android:textColor="@color/primary_red"
                            android:textSize="@dimen/_10ssp"
                            android:layout_margin="@dimen/_3sdp"
                            android:background="@drawable/button_red"/>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/tv_update"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/save"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10ssp"
                            android:layout_margin="@dimen/_3sdp"
                            android:background="@drawable/button_gradient"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
