<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_bg"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="212dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/back"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_back"
                            tools:ignore="MissingConstraints" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_light"
                            android:drawableEnd="@drawable/ic_edit"
                            android:drawablePadding="@dimen/_5sdp"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="start"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/edit"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_9ssp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_menu"
                            tools:ignore="MissingConstraints" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_update"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginEnd="25dp"
                        android:src="@drawable/ic_update"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_delete_data"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginEnd="25dp"
                        android:src="@drawable/ic_delete"
                        android:visibility="gone" />
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/im_profile"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/particip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:drawableStart="@drawable/ic_people_white"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_horizontal|center"
                    android:text="20"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:background="@drawable/bg_theme"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:text="@string/head_about"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/theme_bg"
                    android:layout_marginVertical="@dimen/_18sdp"
                    android:layout_marginHorizontal="@dimen/_18sdp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_6sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/d_rounded_corner">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_note_header"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:layout_gravity="center"
                        android:textStyle="normal"
                        android:focusable="false"
                        android:imeOptions="actionDone"
                        android:textSize="@dimen/_12ssp"
                        android:textCursorDrawable="@color/black"
                        android:textColor="@color/c_leads_list_date"

                        />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
